[package]
name = "infinite-cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
color-eyre = "0.6.2"
derive-new = "0.6.0"
inquire = "0.6.2"
itertools = "0.12.1"
parking_lot = "0.12.1"
reqwest = "0.11.24"
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
spinners = "4.1.1"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zstd = "0.13.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort" # maybe remove
